--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.11",
+    "boxicons": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^1.1.5"
